test/fail/integration/_fail_sem_expr_funct_call_3.hs
x :: [Int] -> Int
x y = y !! 0
z :: Int
z = x
main = print "hello"